# seads

./: .gitignore  CLAUDE.md  CMakeLists.txt  NEXT_STEPS.md  README.md  seads_2026.md
.claude/: settings.json
.claude/agents/: auditor.md  chronicler.md  forge.md  guardian.md
.github/workflows/: guardian.yml
cmake/: DeterminismFlags.cmake
config/rails/: atm.json
config/scenarios/: GOLDEN-SK-Accel-001.json  GOLDEN-SK-Climb-001.json  GOLDEN-SK-EngineOut-001.json  GOLDEN-SK-Gunfire-001.json  GOLDEN-SK-Hit-001.json  GOLDEN-SK-Pitch-001.json  GOLDEN-SK-Stall-001.json  GOLDEN-SK-Turn-001.json  GOLDEN-SK-TurnClimb-001.json  GOLDEN-SK-Winchester-001.json
docs/: SEAL_CARD.md
docs/adr/: ADR-Ki-61-v1.2r0.md  ADR-Step-Net-Layer10-CatchUp-v1.17r0.md  ADR-Step-Net-Layer11-AsyncOutput-v1.17r0.md  ADR-Step-Net-Layer12-ByteCap-v1.17r0.md  ADR-Step-Net-Layer7-Socket-v1.17r0.md  ADR-Step-Net-Layer8-MultiClient-v1.17r0.md  ADR-Step-Net-Layer9-DynamicBroadcast-v1.17r0.md  ADR-Step2-DetMathParity-v1.3r0.md  ADR-Step4-Scenarios-v1.3r0.md  ADR-Step6-Events-v1.12r0.md  ADR-Step6-GEO001-Codec-v1.3r0.md  ADR-Step6-Lockstep-v1.3r0.md  ADR-Step6-Prediction-v1.4r0.md  ADR-Step6-Session-v1.12r0.md  ADR-Step6-Snapshot-Serialization-v1.3r0.md  ADR-Step7-Guns-Attribution-v1.16r0.md  ADR-Step7-Guns-Convergence-v1.15r0.md  ADR-Step7-Guns-G1-Projectiles-v1.9r0.md  ADR-Step7-Guns-G2-HitDamage-v1.10r0.md  ADR-Step7-Guns-G3-Roster-v1.11r0.md  ADR-Step7-Guns-G4-v1.13r0.md  ADR-Step7-Guns-HitQueue-v1.17r0.md  ADR-Step7-Guns-RegionDamage-v1.18r0.md  ADR-Step7-Guns-WireTransport-Ammo-v1.14r0.md  ADR-Step7-Guns-WireTransport-Attribution-v1.17r0.md  ADR-Step7-Guns-WireTransport-RegionDamage-v1.19r0.md  ADR-Step7-Guns-WireTransport-v1.12r0.md  ADR-Step8-FlightModel-B1-v1.5r0.md  ADR-Step8-FlightModel-B2-v1.6r0.md  ADR-Step8-FlightModel-B3-v1.7r0.md  ADR-Step8-FlightModel-B4-v1.8r0.md  ADR-roster-envelopes-v1.2r0.md  ADR-template.md
docs/annex/: ATM-TOP_v1.2.md
docs/cards/: FORGE_AUDIT_CARD-Step2-v1.3r0.md  FORGE_AUDIT_CARD-Step4-v1.3r0.md  FORGE_AUDIT_CARD-Step6-GEO001-v1.3r0.md  FORGE_AUDIT_CARD-Step6-Lockstep-v1.3r0.md  FORGE_AUDIT_CARD-Step6-Prediction-v1.4r0.md  FORGE_AUDIT_CARD-Step6-Snapshot-v1.3r0.md  FORGE_AUDIT_CARD-roster-envelopes-v1.2r0.md  FORGE_AUDIT_CARD-template.md
docs/receipts/: receipt-ATM-Sphere_v1.10r0-e4aeb25.yml  receipt-ATM-Sphere_v1.11r0-674c62f.yml  receipt-ATM-Sphere_v1.12r0-7160fd3.yml  receipt-ATM-Sphere_v1.12r0-8a77422.yml  receipt-ATM-Sphere_v1.12r0-97f0331.yml  receipt-ATM-Sphere_v1.12r0-c61f1f6.yml  receipt-ATM-Sphere_v1.12r0-c6dd73e.yml  receipt-ATM-Sphere_v1.13r0-2de3fc3.yml  receipt-ATM-Sphere_v1.14r0-370334c.yml  receipt-ATM-Sphere_v1.15r0-0c9365b.yml  receipt-ATM-Sphere_v1.16r0-731dbe0.yml  receipt-ATM-Sphere_v1.17r0-1503bf5.yml  receipt-ATM-Sphere_v1.17r0-2f20d08.yml  receipt-ATM-Sphere_v1.17r0-4da022e.yml  receipt-ATM-Sphere_v1.17r0-5740a8c.yml  receipt-ATM-Sphere_v1.17r0-630536d.yml  receipt-ATM-Sphere_v1.17r0-9dcbdc1.yml  receipt-ATM-Sphere_v1.17r0-cf13926.yml  receipt-ATM-Sphere_v1.17r0-e21efda.yml  receipt-ATM-Sphere_v1.17r0-f09b576.yml  receipt-ATM-Sphere_v1.17r0-f9ee33e.yml  receipt-ATM-Sphere_v1.18r0-5a89ef4.yml  receipt-ATM-Sphere_v1.19r0-210e9b6.yml  receipt-ATM-Sphere_v1.19r0-223ebd5.yml  receipt-ATM-Sphere_v1.19r0-255eafb.yml  receipt-ATM-Sphere_v1.19r0-52a38a4.yml  receipt-ATM-Sphere_v1.19r0-7b02417.yml  receipt-ATM-Sphere_v1.19r0-9e75d77.yml  receipt-ATM-Sphere_v1.19r0-f68c09d.yml  receipt-ATM-Sphere_v1.2r0-0a7a258.yml  receipt-ATM-Sphere_v1.2r0-c167504.yml  receipt-ATM-Sphere_v1.2r0-c63bda0.yml  receipt-ATM-Sphere_v1.3r0-13726a4.yml  receipt-ATM-Sphere_v1.3r0-5e0af6b.yml  receipt-ATM-Sphere_v1.3r0-733b8a3.yml  receipt-ATM-Sphere_v1.3r0-8b85a32.yml  receipt-ATM-Sphere_v1.3r0-8d5fad8.yml  receipt-ATM-Sphere_v1.3r0-d5e5e44.yml  receipt-ATM-Sphere_v1.3r0-f2d7e94.yml  receipt-ATM-Sphere_v1.4r0-11e07d4.yml  (+9 more)
src/client/: README.md  aircraft_mesh.cpp  aircraft_mesh.h  client_test_main.cpp  globe.h  playback.cpp  playback.h  record_main.cpp  seadsrec.cpp  seadsrec.h  viewer_main.cpp
src/det_math/: det_math.cpp  det_math.h  detmath_coeffs.h  detmath_test_main.cpp  detmath_vectors.h
src/kernel/: envelope_tables.h  flight_types.h  golden_main.cpp  golden_params.h  kernel.cpp  kernel.h  scenario_main.cpp  scenario_params.h
src/net/: broadcast.cpp  broadcast.h  event.cpp  event.h  event_test_main.cpp  event_vectors.h  framing.cpp  framing.h  framing_test_main.cpp  framing_vectors.h  geo001.cpp  geo001.h  geo001_test_main.cpp  geo001_vectors.h  interp.cpp  interp.h  interp_test_main.cpp  interp_vectors.h  lockstep.cpp  lockstep.h  lockstep_test_main.cpp  lockstep_vectors.h  netasync_test_main.cpp  netcap_test_main.cpp  netcatchup_test_main.cpp  netclient_main.cpp  netdyn_test_main.cpp  netloop_test_main.cpp  netmulti_test_main.cpp  netserver_main.cpp  predict.cpp  predict.h  predict_test_main.cpp  predict_vectors.h  session.cpp  session.h  session_test_main.cpp  session_vectors.h  snapshot.cpp  snapshot.h  (+6 more)
src/replay/: sha256.cpp  sha256.h
tests/property/: conftest.py  test_attribution.py  test_broadcast.py  test_detmath.py  test_energy.py  test_event.py  test_framing.py  test_geo001.py  test_hit.py  test_hit_queue.py  test_interp.py  test_kernel.py  test_lockstep.py  test_predict.py  test_projectile.py  test_region_damage.py  test_session.py  test_snapshot.py  test_stall.py  (+2 more)
tools/: atm_top_probe.py  b4_retune.py  det_math_oracle.py  detmath_ref.py  envelopes.py  event_ref.py  framing_ref.py  gen_coeffs.py  gen_detmath_vectors.py  gen_envelope_tables.py  gen_event_vectors.py  gen_framing_vectors.py  gen_geo001_vectors.py  gen_golden_params.py  gen_interp_vectors.py  gen_lockstep_vectors.py  gen_predict_vectors.py  gen_scenario_params.py  gen_session_vectors.py  gen_snapshot_vectors.py  gen_weapon_vectors.py  geo001_ref.py  hash_sign_json.py  interp_ref.py  lint_determinism.py  lockstep_ref.py  make_receipt.py  perf_probe.py  predict_ref.py  ref_kernel.py  session_ref.py  snapshot_ref.py  spec_monotone_check.py  tuning_probe.py  validate_snapshot.py
(+37 files in other folders)
